--- a/.github/workflows/main_mug.yml
+++ b/.github/workflows/main_mug.yml
@@ -14,27 +14,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '16.x'      
 
-      - name: npm install, build, and test
+      - name: Install npm packages - server
         run: |
+          cd mern/server
+          npm install       
+      
+      - name: Install npm packages, build then copy files - client
+        run: |
+          cd mern/client
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
+          npm run build
+          cp -r ./build ../server/public
+            
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v2
         with:
-          name: node-app
-          path: release.zip
+          name: mern-app
+          path: mern/server
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,7 +50,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: mern-app
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
